--- a/public/booking orig.html
+++ b/public/booking orig.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <title>Calendar</title>
 
-    <link rel="stylesheet" href="../css/calendar.css">
+    <link rel="stylesheet" href="css/calendar.css">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
-    <script type="module" src="../js/timings.js"></script>
+    <script type="module" src="js/timings.js"></script>
 </head>
 
 <body style="background-color:#f5f8fa;height:130%">
     <div id="nav-placeholder"></div>
-    <section class="bg-img-1 bg-overlay-3 p-t-0 p-b-50" style="background-image: url('../images/carousel1.jpg');">
+    <section class="bg-img-1 bg-overlay-3 p-t-0 p-b-50" style="background-image: url('images/carousel1.jpg');">
         <div class="container">
             <div class="flex-w flex-sb-m">
                 <div class="p-t-10 p-b-10 p-r-30">
@@ -129,10 +129,10 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <script src="../js/timings2.js">
+        <script src="js/timings2.js">
         </script>
 
-        <script src="../js/index.js"></script>
+        <script src="js/index.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
         
 
