--- a/public/booking.html
+++ b/public/booking.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking</title>
     <!-- Add the evo-calendar.css for styling -->
-    <link rel="stylesheet" type="text/css" href="../css/evo_calendar/evo-calendar.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/evo_calendar/evo-calendar.royal-navy.min.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/timetable.css">
+    <link rel="stylesheet" type="text/css" href="css/evo_calendar/evo-calendar.css"/>
+    <link rel="stylesheet" type="text/css" href="css/evo_calendar/evo-calendar.royal-navy.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/timetable.css">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
@@ -73,10 +73,10 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
 
     <!-- Add the evo-calendar.js for.. obviously, functionality! -->
-    <script src="../js/evo_js/evo-calendar_booking.js"></script>
+    <script src="js/evo_js/evo-calendar_booking.js"></script>
     
     <!-- Timetable.JS-->
 
-    <script src="../js/bookingv2.js"></script>
+    <script src="js/bookingv2.js"></script>
 </body>
 </html>
