--- a/public/cur_post.html
+++ b/public/cur_post.html
@@ -13,7 +13,7 @@
         <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
 
-        <script src="../js/cur_post.js"></script>
+        <script src="js/cur_post.js"></script>
         <link rel="stylesheet" type="text/css" href="..\fonts\font-awesome-4.7.0\css\font-awesome.css">
 
         <script src="https://unpkg.com/vue@next"></script>
