--- a/public/footer.html
+++ b/public/footer.html
@@ -15,31 +15,31 @@
 
       	
 <!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="../images/icons/favicon.png"/>
+	<link rel="icon" type="image/png" href="images/icons/favicon.png"/>
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../fonts/elegant-font/html-css/style.css">
+    <link rel="stylesheet" type="text/css" href="fonts/elegant-font/html-css/style.css">
   <!--===============================================================================================-->	
-    <link rel="stylesheet" type="text/css" href="../vendor/revolution/css/layers.css">
-    <link rel="stylesheet" type="text/css" href="../vendor/revolution/css/navigation.css">
-    <link rel="stylesheet" type="text/css" href="../vendor/revolution/css/settings.css">
+    <link rel="stylesheet" type="text/css" href="vendor/revolution/css/layers.css">
+    <link rel="stylesheet" type="text/css" href="vendor/revolution/css/navigation.css">
+    <link rel="stylesheet" type="text/css" href="vendor/revolution/css/settings.css">
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../vendor/css-hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../vendor/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css">
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../vendor/animate/animate.css">
+    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../vendor/lightbox2/css/lightbox.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/lightbox2/css/lightbox.min.css">
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/animsition/dist/css/animsition.min.css">
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../css/util.css">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <link rel="stylesheet" type="text/css" href="../css/color.css">
+    <link rel="stylesheet" type="text/css" href="css/util.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/color.css">
 
 
     <style>
@@ -62,7 +62,7 @@
 			<div class="row">
 				<div class=" col-sm-12 col-lg-3 p-t-30">
 					<div class="w-full wrap-pic-max-w">
-						<a href="index.html"><img src="../images/logo.png" alt="LOGO"></a>
+						<a href="index.html"><img src="images/logo.png" alt="LOGO"></a>
 					</div>
 
 					<p class="s-txt9 p-t-30">
