--- a/public/forum.html
+++ b/public/forum.html
@@ -13,7 +13,7 @@
         <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
     
-        <script src="../js/post2.js"></script>
+        <script src="js/post2.js"></script>
     </head>
     
     <body>
