--- a/public/index.html
+++ b/public/index.html
@@ -10,37 +10,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="../images/icons/favicon.png"/>
+	<link rel="icon" type="image/png" href="images/icons/favicon.png"/>
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../fonts/elegant-font/html-css/style.css">
+	<link rel="stylesheet" type="text/css" href="fonts/elegant-font/html-css/style.css">
 <!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/layers.css">
-	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/navigation.css">
-	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/settings.css">
+	<link rel="stylesheet" type="text/css" href="vendor/revolution/css/layers.css">
+	<link rel="stylesheet" type="text/css" href="vendor/revolution/css/navigation.css">
+	<link rel="stylesheet" type="text/css" href="vendor/revolution/css/settings.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../vendor/slick/slick.css">
+	<link rel="stylesheet" type="text/css" href="vendor/slick/slick.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../vendor/lightbox2/css/lightbox.min.css">
+	<link rel="stylesheet" type="text/css" href="vendor/lightbox2/css/lightbox.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css">
+	<link rel="stylesheet" type="text/css" href="vendor/animsition/dist/css/animsition.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../css/util.css">
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<link rel="stylesheet" type="text/css" href="../css/color.css">
-	<!-- <link rel="stylesheet" type="text/css" href="../css/all_icons_min.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/color.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/all_icons_min.css"> -->
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
-<script type="module" src="../js/index2.js"></script>
+<script type="module" src="js/index2.js"></script>
 
 
 <body class="animsition restyle-index">
@@ -105,7 +105,7 @@
 
 					<!-- Slide 2 -->
 					<li data-transition="fade">
-						<img src="../images/shutter2.jpg" alt="IMG-SLIDE" class="rev-slidebg">
+						<img src="images/shutter2.jpg" alt="IMG-SLIDE" class="rev-slidebg">
 
 						<h2 class="tp-caption tp-resizeme txt1 txt-center p-l-15 p-r-15" 
 						data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"y:top;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -524,36 +524,36 @@
 
 	
 <!--===============================================================================================-->	
-	<script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-	<script src="../vendor/wow/wow.min.js"></script>
+	<script src="vendor/wow/wow.min.js"></script>
 <!--===============================================================================================-->
-	<script src="../vendor/animsition/dist/js/animsition.min.js"></script>
+	<script src="vendor/animsition/dist/js/animsition.min.js"></script>
 <!--===============================================================================================-->
-	<script src="../vendor/slick/slick.min.js"></script>
-	<script src="../js/slick-custom.js"></script>
+	<script src="vendor/slick/slick.min.js"></script>
+	<script src="js/slick-custom.js"></script>
 <!--===============================================================================================-->
-	<script src="../vendor/bootstrap/js/popper.min.js"></script>
-	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="vendor/bootstrap/js/popper.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->	
-	<script src="../vendor/revolution/js/jquery.themepunch.tools.min.js"></script>
-	<script src="../vendor/revolution/js/jquery.themepunch.revolution.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.video.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.actions.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.migration.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-	<script src="../js/slide-custom.js"></script>
+	<script src="vendor/revolution/js/jquery.themepunch.tools.min.js"></script>
+	<script src="vendor/revolution/js/jquery.themepunch.revolution.min.js"></script>
+	<script src="vendor/revolution/js/extensions/revolution.extension.video.min.js"></script>
+	<script src="vendor/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
+	<script src="vendor/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
+	<script src="vendor/revolution/js/extensions/revolution.extension.actions.min.js"></script>
+	<script src="vendor/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
+	<script src="vendor/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
+	<script src="vendor/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
+	<script src="vendor/revolution/js/extensions/revolution.extension.migration.min.js"></script>
+	<script src="vendor/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
+	<script src="js/slide-custom.js"></script>
 <!--===============================================================================================-->
-	<script src="../vendor/lightbox2/js/lightbox.min.js"></script>
+	<script src="vendor/lightbox2/js/lightbox.min.js"></script>
 <!--===============================================================================================-->
 
 <!--===============================================================================================-->
-	<script src="../js/main.js"></script>
+	<script src="js/main.js"></script>
 	
     
     <script>
