--- a/public/signup.html
+++ b/public/signup.html
@@ -15,9 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- BASE CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/loginvendor.css" rel="stylesheet">
-    <link href="../css/loginstyle.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/loginvendor.css" rel="stylesheet">
+    <link href="css/loginstyle.css" rel="stylesheet">
 	
 
 
@@ -25,7 +25,7 @@
 	<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script> 
-	<script src="../js/insertuser.js"></script>
+	<script src="js/insertuser.js"></script>
 	
     <style>
 
@@ -49,7 +49,7 @@
 
 	<div class="container-fluid p-0">
 	    <div class="row no-gutters row-height">
-	        <div class="col-lg-6 background-image" data-background="url(../images/carousel2.jpg)">
+	        <div class="col-lg-6 background-image" data-background="url(images/carousel2.jpg)">
 	            <div class="content-left-wrapper opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0.6)">
 	               
 	               
@@ -117,12 +117,12 @@
 
 	
 	<!-- COMMON SCRIPTS -->
-    <script src="../js/common_scripts.js"></script>
-	<script src="../js/common_func.js"></script>
+    <script src="js/common_scripts.js"></script>
+	<script src="js/common_func.js"></script>
 
 	<!-- SPECIFIC SCRIPTS -->
-	<script src="../js/pw_strength.js"></script>
-	<script src="../js/jquery.validate.js"></script>
+	<script src="js/pw_strength.js"></script>
+	<script src="js/jquery.validate.js"></script>
 
 	
 	<script>
