--- a/public/submit-review.html
+++ b/public/submit-review.html
@@ -13,11 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
 	<!-- BASE CSS -->
-	<link href="../course_detail/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../course_detail/css/style.css" rel="stylesheet">
-	<link href="../course_detail/css/menu.css" rel="stylesheet">
-	<link href="../course_detail/css/vendors.css" rel="stylesheet">
-	<link href="../course_detail/css/icon_fonts/css/all_icons_min.css" rel="stylesheet">
+	<link href="course_detail/css/bootstrap.min.css" rel="stylesheet">
+	<link href="course_detail/css/style.css" rel="stylesheet">
+	<link href="course_detail/css/menu.css" rel="stylesheet">
+	<link href="course_detail/css/vendors.css" rel="stylesheet">
+	<link href="course_detail/css/icon_fonts/css/all_icons_min.css" rel="stylesheet">
     
 </head>
 
@@ -79,9 +79,9 @@
 	<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script> 
 	<!-- COMMON SCRIPTS -->
-	<script src="../course_detail/js/jquery-3.6.0.min.js"></script>
-	<script src="../course_detail/js/common_scripts.min.js"></script>
-	<script src="../course_detail/js/functions.js"></script>
+	<script src="course_detail/js/jquery-3.6.0.min.js"></script>
+	<script src="course_detail/js/common_scripts.min.js"></script>
+	<script src="course_detail/js/functions.js"></script>
 
 	<script>
 		$(function(){
@@ -91,7 +91,7 @@
 		  $("#footer").load("footer.html");
 		});
 	</script>
-	<script src="../js/submit_review.js"></script>
+	<script src="js/submit_review.js"></script>
 	<script>
 		function capitalizeFirstLetter(string) {
 			return string.charAt(0).toUpperCase() + string.slice(1);
