--- a/public/bookingdetails.html
+++ b/public/bookingdetails.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Calendar</title>
 
-    <link rel="stylesheet" href="../css/confirm.css">
+    <link rel="stylesheet" href="css/confirm.css">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
