--- a/public/instructor-detail.html
+++ b/public/instructor-detail.html
@@ -15,42 +15,42 @@
 	<meta name="keywords" content="AuCreative theme template">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" type="text/css" href="../css/all_icons_min.css">
+	<link rel="stylesheet" type="text/css" href="css/all_icons_min.css">
 	
 <!--===============================================================================================-->
-	<!-- <link rel="icon" type="image/png" href="../images/icons/favicon.png"/> -->
+	<!-- <link rel="icon" type="image/png" href="images/icons/favicon.png"/> -->
 <!--===============================================================================================-->
-	<!-- <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css"> -->
 <!--===============================================================================================-->
-	<!-- <link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css"> -->
 <!--===============================================================================================-->
-	<!-- <link rel="stylesheet" type="text/css" href="../fonts/elegant-font/html-css/style.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="fonts/elegant-font/html-css/style.css"> -->
 <!--===============================================================================================-->
-	<!-- <link rel="stylesheet" type="text/css" href="../vendor/css-hamburgers/hamburgers.min.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css"> -->
 <!--===============================================================================================-->
-	<!-- <link rel="stylesheet" type="text/css" href="../vendor/slick/slick.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css"> -->
 <!--===============================================================================================-->
-	<!-- <link rel="stylesheet" type="text/css" href="../vendor/animate/animate.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css"> -->
 <!--===============================================================================================-->
-	<!-- <link rel="stylesheet" type="text/css" href="../vendor/lightbox2/css/lightbox.min.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="vendor/lightbox2/css/lightbox.min.css"> -->
 <!--===============================================================================================-->
-	<!-- <link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="vendor/animsition/dist/css/animsition.min.css"> -->
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../css/util.css">
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<link rel="stylesheet" type="text/css" href="../css/color.css">
-	<link rel="stylesheet" type="text/css" href="../css/all_icons_min.css">
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/color.css">
+	<link rel="stylesheet" type="text/css" href="css/all_icons_min.css">
 <!--===============================================================================================-->
-<link href="../course_detail/css/bootstrap.min.css" rel="stylesheet">
-<link href="../course_detail/css/style.css" rel="stylesheet">
-<!-- <link href="../course_detail/css/menu.css" rel="stylesheet"> -->
-<!-- <link href="../course_detail/css/vendors.css" rel="stylesheet"> -->
-<link href="../course_detail/css/icon_fonts/css/all_icons_min.css" rel="stylesheet">
-<!-- <link href="../course_detail/css/custom.css" rel="stylesheet"> -->
+<link href="course_detail/css/bootstrap.min.css" rel="stylesheet">
+<link href="course_detail/css/style.css" rel="stylesheet">
+<!-- <link href="course_detail/css/menu.css" rel="stylesheet"> -->
+<!-- <link href="course_detail/css/vendors.css" rel="stylesheet"> -->
+<link href="course_detail/css/icon_fonts/css/all_icons_min.css" rel="stylesheet">
+<!-- <link href="course_detail/css/custom.css" rel="stylesheet"> -->
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
-<script type="module" src="../js/driverprofile.js"></script>
+<script type="module" src="js/driverprofile.js"></script>
 
 <body class="animsition restyle-index">
     
@@ -100,39 +100,39 @@
 
 
 	<!-- COMMON SCRIPTS -->
-	<!-- <script src="../course_detail/js/jquery-3.6.0.min.js"></script> -->
-	<script src="../course_detail/js/common_scripts.min.js"></script>
-	<script src="../course_detail/js/functions.js"></script>
+	<!-- <script src="course_detail/js/jquery-3.6.0.min.js"></script> -->
+	<script src="course_detail/js/common_scripts.min.js"></script>
+	<script src="course_detail/js/functions.js"></script>
 	
 <!--===============================================================================================-->	
-	<!-- <script src="../vendor/jquery/jquery-3.2.1.min.js"></script> -->
+	<!-- <script src="vendor/jquery/jquery-3.2.1.min.js"></script> -->
 <!--===============================================================================================-->
-	<!-- <script src="../vendor/wow/wow.min.js"></script> -->
+	<!-- <script src="vendor/wow/wow.min.js"></script> -->
 <!--===============================================================================================-->
-	<script src="../vendor/animsition/dist/js/animsition.min.js"></script>
+	<script src="vendor/animsition/dist/js/animsition.min.js"></script>
 <!--===============================================================================================-->
-	<!-- <script src="../vendor/slick/slick.min.js"></script>
-	<script src="../js/slick-custom.js"></script> -->
+	<!-- <script src="vendor/slick/slick.min.js"></script>
+	<script src="js/slick-custom.js"></script> -->
 <!--===============================================================================================-->
-	<!-- <script src="../vendor/bootstrap/js/popper.min.js"></script> -->
-	<!-- <script src="../vendor/bootstrap/js/bootstrap.min.js"></script> -->
+	<!-- <script src="vendor/bootstrap/js/popper.min.js"></script> -->
+	<!-- <script src="vendor/bootstrap/js/bootstrap.min.js"></script> -->
 <!--===============================================================================================-->
-	<!-- <script src="../vendor/lightbox2/js/lightbox.min.js"></script> -->
+	<!-- <script src="vendor/lightbox2/js/lightbox.min.js"></script> -->
 <!--===============================================================================================-->
-	<!-- <script src="../vendor/isotope/isotope.pkgd.min.js"></script> -->
+	<!-- <script src="vendor/isotope/isotope.pkgd.min.js"></script> -->
 <!--===============================================================================================-->
-	<!-- <script src="../vendor/parallax100/parallax100.js"></script>
+	<!-- <script src="vendor/parallax100/parallax100.js"></script>
 	<script>
         $('.parallax100').parallax100();
 	</script> -->
 <!--===============================================================================================-->
-	<!-- <script src="../vendor/waypoint/jquery.waypoints.min.js"></script> -->
+	<!-- <script src="vendor/waypoint/jquery.waypoints.min.js"></script> -->
 <!--===============================================================================================-->
 	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script> -->
 	<!-- <script src="js/map-custom.js"></script> -->
 <!--===============================================================================================-->
-	<script src="../js/main.js"></script>
-	<!-- <script src="../js/main.js"></script> -->
+	<script src="js/main.js"></script>
+	<!-- <script src="js/main.js"></script> -->
 
 	<script>
 		$(function(){
