--- a/public/instructor-list.html
+++ b/public/instructor-list.html
@@ -9,30 +9,30 @@
 	<meta name="keywords" content="AuCreative theme template">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
-<link rel="stylesheet" href="../filterbar/css/bootstrap.min.css">
-<link rel="stylesheet" href="../filterbar/css/bootstrap-select.css">
-<link rel="stylesheet" href="../filterbar/css/main.css">
-<link rel="stylesheet" href="../filterbar/css/color.css">
-<!-- <link rel="stylesheet" href="../filterbar/css/responsive.css"> -->
+<link rel="stylesheet" href="filterbar/css/bootstrap.min.css">
+<link rel="stylesheet" href="filterbar/css/bootstrap-select.css">
+<link rel="stylesheet" href="filterbar/css/main.css">
+<link rel="stylesheet" href="filterbar/css/color.css">
+<!-- <link rel="stylesheet" href="filterbar/css/responsive.css"> -->
 
-	<!-- <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css"> -->
-	<link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="vendor/animsition/dist/css/animsition.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<link rel="stylesheet" type="text/css" href="../css/color.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/color.css">
 	<link rel="stylesheet" type="text/css" href="..\fonts\font-awesome-4.7.0\css\font-awesome.css">
 <!--===============================================================================================-->
 
 
 </head>
-<script type="module" src="../js/driverdetails.js"></script>
+<script type="module" src="js/driverdetails.js"></script>
 
 <body class="animsition restyle-index">
 	<div id="nav-placeholder">
 
 	</div>
 	<!-- Title page -->
-	<section class="bg-img-1 bg-overlay-3 p-t-93 p-b-95" style="background-image: url('../images/carousel1.jpg');">
+	<section class="bg-img-1 bg-overlay-3 p-t-93 p-b-95" style="background-image: url('images/carousel1.jpg');">
 		<div class="container">
 			<div class="flex-w flex-sb-m">
 				<div class="p-t-10 p-b-10 p-r-30">
@@ -191,12 +191,12 @@
 
 
 <!--===============================================================================================-->	
-	<script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 
-	<script src="../vendor/animsition/dist/js/animsition.min.js"></script>
-	<!-- <script src="../vendor/bootstrap/js/popper.min.js"></script>
-	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script> -->
-	<script src="../js/main.js"></script>
+	<script src="vendor/animsition/dist/js/animsition.min.js"></script>
+	<!-- <script src="vendor/bootstrap/js/popper.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script> -->
+	<script src="js/main.js"></script>
 	<div id="nav-placeholder">
 
     </div>
@@ -212,21 +212,21 @@
 
 	</script>
 
-	<script src="../filterbar/js/vendor/jquery-library.js"></script>
-	<script src="../filterbar/js/vendor/bootstrap.min.js"></script>
+	<script src="filterbar/js/vendor/jquery-library.js"></script>
+	<script src="filterbar/js/vendor/bootstrap.min.js"></script>
 	<script src="https://maps.google.com/maps/api/js?key=AIzaSyCR-KEWAVCn52mSdeVeTqZjtqbmVJyfSus&language=en"></script>
-	<script src="../filterbar/js/bootstrap-select.min.js"></script>
-	<script src="../filterbar/js/jquery-scrolltofixed.js"></script>
-	<script src="../filterbar/js/owl.carousel.min.js"></script>
-	<script src="../filterbar/js/jquery.mmenu.all.js"></script>
-	<script src="../filterbar/js/packery.pkgd.min.js"></script>
-	<script src="../filterbar/js/jquery.vide.min.js"></script>
-	<script src="../filterbar/js/scrollbar.min.js"></script>
-	<script src="../filterbar/js/prettyPhoto.js"></script>
-	<script src="../filterbar/js/countdown.js"></script>
-	<script src="../filterbar/js/parallax.js"></script>
-	<script src="../filterbar/js/gmap3.js"></script>
-	<script src="../filterbar/js/main.js"></script>
+	<script src="filterbar/js/bootstrap-select.min.js"></script>
+	<script src="filterbar/js/jquery-scrolltofixed.js"></script>
+	<script src="filterbar/js/owl.carousel.min.js"></script>
+	<script src="filterbar/js/jquery.mmenu.all.js"></script>
+	<script src="filterbar/js/packery.pkgd.min.js"></script>
+	<script src="filterbar/js/jquery.vide.min.js"></script>
+	<script src="filterbar/js/scrollbar.min.js"></script>
+	<script src="filterbar/js/prettyPhoto.js"></script>
+	<script src="filterbar/js/countdown.js"></script>
+	<script src="filterbar/js/parallax.js"></script>
+	<script src="filterbar/js/gmap3.js"></script>
+	<script src="filterbar/js/main.js"></script>
 	<script>
 
 	</script>
