--- a/public/navbar.html
+++ b/public/navbar.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>FlexNav</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/flexnav.css">
-    <link rel="stylesheet" type="text/css" href="../css/demo.css">
+    <link rel="stylesheet" type="text/css" href="css/flexnav.css">
+    <link rel="stylesheet" type="text/css" href="css/demo.css">
 
 
   </head>
@@ -14,7 +14,7 @@
     <div id="nav-background" >
       <div id="nav-container" style="height: 100px;" >
         <header id="nav-header">
-          <h1><a href="index.html" id="nav-logo"><img src="../images/logo.png" alt="" width="50%" height="5%"></a></h1>
+          <h1><a href="index.html" id="nav-logo"><img src="images/logo.png" alt="" width="50%" height="5%"></a></h1>
           <div id="nav-menu-button">MENU</div>
         </header>
         <nav>
@@ -34,7 +34,7 @@
    
 
 
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
     <script>
       const mode = sessionStorage.getItem('userid');
 
@@ -82,8 +82,8 @@
       
   </script>
 
-<script src="../vendor/bootstrap/js/popper.min.js"></script>
-<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="vendor/bootstrap/js/popper.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   </body>
 
 </html>
