--- a/public/telegramhelp.html
+++ b/public/telegramhelp.html
@@ -26,7 +26,7 @@
 
         <div class="row" style="margin-top:30px;">
             <div class="col-sm">
-                <img src="../images/telegram.png" style="width:300px;height:300px">
+                <img src="images/telegram.png" style="width:300px;height:300px">
               </div>
               <div class="col-sm">
                 <b>Step 1</b>  Access our Telegram Bot via this <a href="https://t.me/DriverZone_Bot">Link</a>
