--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,7 @@
 
 	<title>Home</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="AuCreative theme tempalte">
-	<meta name="author" content="AuCreative">
-	<meta name="keywords" content="AuCreative theme template">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--===============================================================================================-->
@@ -507,7 +505,7 @@
 			<div class="flex-c-m p-t-46">
 				<!-- Button -->
 				<a href="instructor-list.html" class="btn-drive m-txt1 size5 bg2 hov-color-white bo-rad-4">
-					View All Instructor
+					View All Instructors
 					<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 				</a>
 			</div>
