last update hopefully

--- a/public/footer.html
+++ b/public/footer.html
@@ -102,7 +102,7 @@
 
 						<li>
 							<i class="fa fa-envelope-o" aria-hidden="true"></i>
-							driverzone
+							<a href="mailto:driverzonesmu@gmail.com"> DriverZone</a>
 						</li>
 
 						<li>
