--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Calendar</title>
+    <title>Confirmation</title>
     <link rel="stylesheet" href="css/confirm.css">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
