--- a/public/instructor-detail.html
+++ b/public/instructor-detail.html
@@ -8,7 +8,7 @@
 
 <head>
 
-	<title>Course Detail</title>
+	<title>Instructor Detail</title>
 	<meta charset="UTF-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
