--- a/public/telegramhelp.html
+++ b/public/telegramhelp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Telegram</title>
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     
